RESOLVED FIXED106683
TestRunner leaks when running tests
https://bugs.webkit.org/show_bug.cgi?id=106683
Summary TestRunner leaks when running tests
Pratik Solanki
Reported 2013-01-11 11:36:01 PST
When looking at <http://build.webkit.org/builders/Apple%20MountainLion%20%28Leaks%29/builds/2298/steps/layout-test/logs/stdio>, there are a number of TestRunner object leaks e.g. Leak: 0x7fd29a48bcc0 size=256 zone: DefaultMallocZone_0x1016e3000 0x00000001 0x00000000 0x01000000 0x00000000 ................ 0x00000000 0x00000000 0x00000000 0x00000000 ................ 0x00010001 0x00000000 0x01000000 0x00000000 ................ 0x00010000 0x00000001 0x00000000 0x00000000 ................ 0x00000000 0x00000000 0x00000000 0x00000000 ................ 0x00000000 0x00000000 0x00000000 0x00000000 ................ 0x00000000 0x00000000 0x00000000 0x00000000 ................ 0x00000081 0x00000000 0x00000073 0x00000000 ........s....... ... Call stack: [thread 0x7fff72b57180]: start main DumpRenderTree.mm:932 dumpRenderTree(int, char const**) DumpRenderTree.mm:894 runTestingServerLoop() DumpRenderTree.mm:847 runTest(std::__1::basic_string&lt;char, std::__1::char_traits&lt;char&gt;, std::__1::allocator&lt;char&gt; &gt; const&amp;) DumpRenderTree.mm:1332 TestRunner::create(std::__1::basic_string&lt;char, std::__1::char_traits&lt;char&gt;, std::__1::allocator&lt;char&gt; &gt; const&amp;, std::__1::basic_string&lt;char, std::__1::char_traits&lt;char&gt;, std::__1::allocator&lt;char&gt; &gt; const&amp;) TestRunner.cpp:106 WTF::RefCounted&lt;TestRunner&gt;::operator new(unsigned long) RefCounted.h:197 WTF::fastMalloc(unsigned long) FastMalloc.cpp:274 malloc malloc_zone_malloc
Attachments
Patch (1.42 KB, patch)
2013-01-11 11:44 PST, Pratik Solanki
simon.fraser: review+
Pratik Solanki
Comment 1 2013-01-11 11:44:37 PST
Pratik Solanki
Comment 2 2013-01-11 11:59:35 PST
Note You need to log in before you can comment on or make changes to this bug.