TestRunner leaks when running tests https://bugs.webkit.org/show_bug.cgi?id=106683

Reviewed by Simon Fraser.

Remove extra ref() that we missed out on deleting when refactoring window.layoutTestController
to window.testRunner in r124705. This caused the TestRunner object to be leaked when running
tests.

* DumpRenderTree/TestRunner.cpp:
(TestRunner::makeWindowObject):

Canonical link: https://commits.webkit.org/124893@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139478 268f45cc-cd09-0410-ab3c-d52691b4dbfc